--- a/lib/webui/public/index.css
+++ b/lib/webui/public/index.css
@@ -1,13 +1,13 @@
 body {
   margin: 2em;
   font-family: sans-serif;
-  font-size: 14px;
+  font-size: 16px;
 }
 
 feeder-feed  {
 }
 
-feeder-feed ul {
+feeder-feed ul, section.items ul {
   list-style: none;
   padding: 0;
   margin: 0;
@@ -29,7 +29,7 @@ feeder-feed details summary {
 feeder-feed ul li {
 }
 
-feeder-feed feeder-feed-item {
+feeder-feed-item {
   display: flex;
   flex-direction: column;
   row-gap: 0.5em;
@@ -40,7 +40,7 @@ feeder-feed feeder-feed-item {
   position: relative;
 }
 
-feeder-feed feeder-feed-item header {
+feeder-feed-item header {
   display: flex;
   max-height: 30em;
   min-height: 12em;
@@ -49,7 +49,7 @@ feeder-feed feeder-feed-item header {
   background-color: rgba(0, 0, 0, 0.25);
 }
 
-feeder-feed feeder-feed-item header .title {
+feeder-feed-item header .title {
   position: absolute;
   left: 0;
   right: 0;
@@ -62,28 +62,38 @@ feeder-feed feeder-feed-item header .title {
   text-shadow: 1px 1px rgba(0, 0, 0, 0.75)
 }
 
-feeder-feed feeder-feed-item .thumbnail {
+feeder-feed-item .thumbnail {
   width: 100%;
   height: 128px;
   overflow: hidden;
   background-color: rgba(0, 0, 0, 0.125);
 }
 
-feeder-feed feeder-feed-item .thumbnail img {
+feeder-feed-item .thumbnail img {
   width: 100%;
 }
 
-feeder-feed feeder-feed-item .summary {
+feeder-feed-item .summary {
   padding: 0;
   margin: 0;
   padding: 1em 1em 2.25em 1em;
   line-height: 1.25em;
 }
 
-feeder-feed feeder-feed-item time {
+feeder-feed-item time {
   position: absolute;
   right: 0;
   bottom: 0;
   font-size: 0.9em;
   padding: 0.5em 0.75em;
+}
+
+form.rag {
+  display: flex;
+  flex-direction: column;
+  width: 50vw;;
+}
+
+form.rag textarea {
+  height: 10em;
 }
