--- a/lib/webui/public/index.css
+++ b/lib/webui/public/index.css
@@ -1,7 +1,8 @@
 body {
   margin: 2em;
   font-family: sans-serif;
-  font-size: 16px;
+  font-size: 14px;
+  line-height: 1.3em;
 }
 
 feeder-feed  {
@@ -13,9 +14,9 @@ feeder-feed ul, section.items ul {
   margin: 0;
   margin-bottom: 4em;
   display: grid;
-  grid-template-columns: repeat(5, minmax(0, 1fr));  
+  grid-template-columns: repeat(7, minmax(0, 1fr));  
   column-gap: 1.5em;
-  row-gap: 1.5em;
+  row-gap: 2.5em;
 }
 
 feeder-feed details summary {
@@ -38,6 +39,7 @@ feeder-feed-item {
   height: 100%;
   overflow: hidden;
   position: relative;
+  padding-bottom: 1.125em;  
 }
 
 feeder-feed-item header {
@@ -54,17 +56,18 @@ feeder-feed-item header .title {
   left: 0;
   right: 0;
   bottom: 0;
-  font-size: 1.125em;
-  line-height: 1.25em;
+  font-weight: bold;
   padding: 1em;
   color: rgba(255, 255, 255, 1.0);
   background-color: rgba(0, 0, 0, 0.5);
-  text-shadow: 1px 1px rgba(0, 0, 0, 0.75)
+  text-shadow: 2px 2px rgba(0, 0, 0, 0.75);
+  text-decoration: none;
 }
 
 feeder-feed-item .thumbnail {
+  position: absolute;
+  top: 0;
   width: 100%;
-  height: 128px;
   overflow: hidden;
   background-color: rgba(0, 0, 0, 0.125);
 }
@@ -76,15 +79,23 @@ feeder-feed-item .thumbnail img {
 feeder-feed-item .summary {
   padding: 0;
   margin: 0;
-  padding: 1em 1em 2.25em 1em;
-  line-height: 1.25em;
+  padding: 1em;
+  background-color: rgba(255, 255, 255, 1.0);
+}
+
+feeder-feed-item .author {
+  position: absolute;
+  left: 0.5em;
+  bottom: 0;
+  font-size: 0.75em;
+  padding: 0.5em 0.75em;
 }
 
 feeder-feed-item time {
   position: absolute;
-  right: 0;
+  right: 0.5em;
   bottom: 0;
-  font-size: 0.9em;
+  font-size: 0.75em;
   padding: 0.5em 0.75em;
 }
 
